--- a/Lab1/lab1.ipynb
+++ b/Lab1/lab1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
     "def problem(N, seed=None):\n",
-    "    \"\"\"Creates a list whose elements are lists that contains a random amount of numbers between 0 and N-1\"\"\"\n",
+    "    \"\"\"Creates a list of lists that contains a random amount of numbers between 0 and N-1.\"\"\"\n",
     "    random.seed(seed)\n",
     "    return [\n",
     "        list(set(random.randint(0, N - 1) for n in range(random.randint(N // 5, N // 2))))\n",
@@ -50,21 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
     "def goal_test(current_state, goal_state):\n",
-    "    \"\"\"Checks if the current state is the same as the goal state\"\"\"\n",
+    "    \"\"\"Checks if the current state is the same as the goal state.\"\"\"\n",
     "    return all(elem in current_state for elem in goal_state)\n",
     "\n",
     "def count_unique_elem(current_state, l):\n",
-    "    \"\"\"Returns the number of different elements between the lists\"\"\"\n",
+    "    \"\"\"Returns the number of unique elements between the lists.\"\"\"\n",
     "    return len(set(l).difference(set(current_state)))\n",
     "\n",
     "def count_unique_elem_opt(current_state, l):\n",
-    "    \"\"\"Returns the number of different elements between the lists\"\"\"\n",
-    "    return len(set(l).difference(set(current_state)))*(len(set(l)) == len(l))"
+    "    \"\"\"Returns the number of unique elements between the lists also regarding duplicates of numbers.\"\"\"\n",
+    "    return (len(set(l).difference(set(current_state)))*(len(set(l)) == len(l)))"
    ]
   },
   {
@@ -77,18 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
     "def search(N, seed=None):\n",
-    "    \"\"\"Searches for the least amount of lists that together contains the numbers from 0 to N-1\"\"\"\n",
+    "    \"\"\"Searches for the least amount of lists that together contains the numbers from 0 to N-1.\"\"\"\n",
     "    state_space = problem(N, seed)\n",
     "    GOAL_STATE = set(range(N))\n",
     "    current_state = list()\n",
     "    visited_nodes = 0\n",
     "    weight = 0\n",
-    "\n",
     "    state_space = sorted(state_space, key=lambda l: count_unique_elem(current_state, l))\n",
     "\n",
     "    while state_space and not goal_test(current_state, GOAL_STATE):\n",
@@ -100,12 +99,11 @@
     "            current_state.append(num)\n",
     "        \n",
     "        state_space = sorted(state_space, key=lambda l: count_unique_elem_opt(current_state, l))\n",
-    "        #print(f'state_space: {state_space}')\n",
     "\n",
     "    if (goal_test(current_state, GOAL_STATE)):\n",
-    "        logging.info(f'Solution found for N={N}: w={weight}: Visited nodes={visited_nodes}')\n",
+    "        logging.info(f' Solution found for N={N}: w={weight}: visited nodes={visited_nodes}: (bloat={(weight-N)/N*100:.0f}%)') \n",
     "    else:\n",
-    "        logging.info(f'No solution found')\n",
+    "        logging.info(f' No solution found')\n",
     "\n",
     "logging.getLogger().setLevel(logging.INFO)  "
    ]
@@ -114,24 +112,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test of search function"
+    "### Running Search Algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Solution found for N=5: w=6: Visited nodes=3\n",
-      "INFO:root:Solution found for N=10: w=13: Visited nodes=3\n",
-      "INFO:root:Solution found for N=20: w=32: Visited nodes=4\n",
-      "INFO:root:Solution found for N=100: w=189: Visited nodes=5\n",
-      "INFO:root:Solution found for N=500: w=1375: Visited nodes=7\n",
-      "INFO:root:Solution found for N=1000: w=3087: Visited nodes=8\n"
+      "INFO:root: Solution found for N=5: w=6: visited nodes=3: (bloat=20%)\n",
+      "INFO:root: Solution found for N=10: w=13: visited nodes=3: (bloat=30%)\n",
+      "INFO:root: Solution found for N=20: w=32: visited nodes=4: (bloat=60%)\n",
+      "INFO:root: Solution found for N=100: w=189: visited nodes=5: (bloat=89%)\n",
+      "INFO:root: Solution found for N=500: w=1375: visited nodes=7: (bloat=175%)\n",
+      "INFO:root: Solution found for N=1000: w=3087: visited nodes=8: (bloat=209%)\n"
      ]
     }
    ],
@@ -143,62 +141,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root: Solution found for N=1000: w=3091: visited nodes=8: (bloat=209%)\n",
+      "INFO:root: Solution found for N=1000: w=3039: visited nodes=8: (bloat=204%)\n",
+      "INFO:root: Solution found for N=1000: w=3384: visited nodes=9: (bloat=238%)\n",
+      "INFO:root: Solution found for N=1000: w=3028: visited nodes=8: (bloat=203%)\n",
+      "INFO:root: Solution found for N=1000: w=3049: visited nodes=8: (bloat=205%)\n",
+      "INFO:root: Solution found for N=1000: w=3159: visited nodes=8: (bloat=216%)\n",
+      "INFO:root: Solution found for N=1000: w=3091: visited nodes=8: (bloat=209%)\n",
+      "INFO:root: Solution found for N=1000: w=3088: visited nodes=8: (bloat=209%)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0], [1], [0], [4], [0], [1], [4], [4], [4], [1, 3], [0, 1], [2], [1], [0], [0, 2], [2, 4], [3], [3], [4], [2, 4], [0], [1], [0, 1], [3], [2, 3]]\n"
+      "2.45 s ± 1.04 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 3],\n",
-       " [0, 1],\n",
-       " [0, 2],\n",
-       " [2, 4],\n",
-       " [2, 4],\n",
-       " [0, 1],\n",
-       " [2, 3],\n",
-       " [0],\n",
-       " [1],\n",
-       " [0],\n",
-       " [4],\n",
-       " [0],\n",
-       " [1],\n",
-       " [4],\n",
-       " [4],\n",
-       " [4],\n",
-       " [2],\n",
-       " [1],\n",
-       " [0],\n",
-       " [3],\n",
-       " [3],\n",
-       " [4],\n",
-       " [0],\n",
-       " [1],\n",
-       " [3]]"
-      ]
-     },
-     "execution_count": 334,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def find_next_list(current_state, l):\n",
-    "    return len(set(l).difference(set(current_state)))\n",
-    "\n",
-    "state_space = problem(5,42)\n",
-    "print(state_space)\n",
-    "\n",
-    "curr = []\n",
-    "#print(len(set(curr)))\n",
-    "state_space = sorted(state_space, key=lambda l: find_next_list(curr, l), reverse=True)\n",
-    "state_space\n"
+    "%timeit search(1_000)"
    ]
   }
  ],
