--- a/Lab1/lab1.ipynb
+++ b/Lab1/lab1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -141,20 +141,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root: Solution found for N=1000: w=3091: visited nodes=8: (bloat=209%)\n",
-      "INFO:root: Solution found for N=1000: w=3039: visited nodes=8: (bloat=204%)\n",
-      "INFO:root: Solution found for N=1000: w=3384: visited nodes=9: (bloat=238%)\n",
-      "INFO:root: Solution found for N=1000: w=3028: visited nodes=8: (bloat=203%)\n",
-      "INFO:root: Solution found for N=1000: w=3049: visited nodes=8: (bloat=205%)\n",
-      "INFO:root: Solution found for N=1000: w=3159: visited nodes=8: (bloat=216%)\n",
-      "INFO:root: Solution found for N=1000: w=3091: visited nodes=8: (bloat=209%)\n",
+      "INFO:root: Solution found for N=1000: w=2888: visited nodes=8: (bloat=189%)\n",
+      "INFO:root: Solution found for N=1000: w=3175: visited nodes=8: (bloat=217%)\n",
+      "INFO:root: Solution found for N=1000: w=3160: visited nodes=8: (bloat=216%)\n",
+      "INFO:root: Solution found for N=1000: w=3012: visited nodes=8: (bloat=201%)\n",
+      "INFO:root: Solution found for N=1000: w=3118: visited nodes=8: (bloat=212%)\n",
+      "INFO:root: Solution found for N=1000: w=3031: visited nodes=8: (bloat=203%)\n",
+      "INFO:root: Solution found for N=1000: w=3121: visited nodes=8: (bloat=212%)\n",
       "INFO:root: Solution found for N=1000: w=3088: visited nodes=8: (bloat=209%)\n"
      ]
     },
@@ -162,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.45 s ± 1.04 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.99 s ± 779 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
