Lab 1 - ready for peer review

--- a/Lab1/lab1.ipynb
+++ b/Lab1/lab1.ipynb
@@ -4,13 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 1\n",
+    "# Lab 1 \n",
+    "Angelica Ferlin, 2022 <br />\n",
+    "<br />\n",
     "[Link to instructions](https://github.com/squillero/computational-intelligence/blob/master/2022-23/lab1_set-covering.ipynb)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -141,28 +143,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root: Solution found for N=1000: w=2888: visited nodes=8: (bloat=189%)\n",
-      "INFO:root: Solution found for N=1000: w=3175: visited nodes=8: (bloat=217%)\n",
-      "INFO:root: Solution found for N=1000: w=3160: visited nodes=8: (bloat=216%)\n",
-      "INFO:root: Solution found for N=1000: w=3012: visited nodes=8: (bloat=201%)\n",
-      "INFO:root: Solution found for N=1000: w=3118: visited nodes=8: (bloat=212%)\n",
-      "INFO:root: Solution found for N=1000: w=3031: visited nodes=8: (bloat=203%)\n",
-      "INFO:root: Solution found for N=1000: w=3121: visited nodes=8: (bloat=212%)\n",
-      "INFO:root: Solution found for N=1000: w=3088: visited nodes=8: (bloat=209%)\n"
+      "INFO:root: Solution found for N=1000: w=3042: visited nodes=8: (bloat=204%)\n",
+      "INFO:root: Solution found for N=1000: w=3086: visited nodes=8: (bloat=209%)\n",
+      "INFO:root: Solution found for N=1000: w=3055: visited nodes=8: (bloat=206%)\n",
+      "INFO:root: Solution found for N=1000: w=3082: visited nodes=8: (bloat=208%)\n",
+      "INFO:root: Solution found for N=1000: w=3114: visited nodes=8: (bloat=211%)\n",
+      "INFO:root: Solution found for N=1000: w=3127: visited nodes=8: (bloat=213%)\n",
+      "INFO:root: Solution found for N=1000: w=2986: visited nodes=8: (bloat=199%)\n",
+      "INFO:root: Solution found for N=1000: w=3405: visited nodes=9: (bloat=240%)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.99 s ± 779 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.08 s ± 450 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
