--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -542,15 +542,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "#compute the fittness\n",
-    "def head2head(individual1: dict, opponent: Callable, nim_size: int):\n",
+    "def head2head(individual1: dict, opponent: Callable, nim_size: int) -> int:\n",
     "    won = 0\n",
-    "    NUM_MATCHES = 1 \n",
+    "    #NUM_MATCHES = 1 \n",
     "    nim = Nim(nim_size)\n",
     "\n",
     "    players = (make_strategy(individual1), opponent)\n",
@@ -565,30 +565,30 @@
     "    winner = 1 - player\n",
     "    \n",
     "    if winner == 0:\n",
-    "        individual1[\"fitness\"] +=1\n",
+    "        #individual1[\"fitness\"] +=1\n",
     "        #logging.debug('Player won over agent')\n",
     "        #öka fitness på individ1 vid vinst\n",
-    "   \n",
-    "    \n",
-    "   \n"
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Rule1': 2, 'Rule2': [1, 3], 'Rule3': [1, 10], 'fitness': 0}\n"
+      "{'Rule1': 2, 'Rule2': [1, 3], 'Rule3': [1, 10], 'fitness': ()}\n"
      ]
     }
    ],
    "source": [
-    "indv1 = {'Rule1': 2, 'Rule2': [1,3], 'Rule3': [1,10], 'fitness':0}\n",
-    "indv2 = {'Rule1': 0, 'Rule2': [1,2], 'Rule3': [2,2], 'fitness':0}\n",
+    "indv1 = {'Rule1': 2, 'Rule2': [1,3], 'Rule3': [1,10], 'fitness':()}\n",
+    "indv2 = {'Rule1': 0, 'Rule2': [1,2], 'Rule3': [2,2], 'fitness':()}\n",
     "#OPPONENT = [nim_sum_l, rand, dumb]\n",
     "\n",
     "#opponent = OPPONENT[2]\n",
@@ -602,22 +602,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
     "# calculate fitness for whole population\n",
     "def calculate_fitness(population: list, nim_size):\n",
     "    NUM_MATCHES = 10\n",
-    "    for strat in OPPONENT:\n",
-    "        for p1 in population:\n",
+    "    \n",
+    "    for p1 in population:\n",
+    "        #logging.debug(f\"player {p1}\")\n",
+    "        fitness = []\n",
+    "\n",
+    "        for strat in OPPONENT:\n",
+    "            #logging.debug(f\"STRAT: {strat}\")\n",
+    "            wins = 0\n",
     "            for _ in range(NUM_MATCHES):\n",
-    "                head2head(individual1=p1, opponent=strat, nim_size=nim_size)\n"
+    "                wins += head2head(individual1=p1, opponent=strat, nim_size=nim_size)\n",
+    "            fitness.append(wins/NUM_MATCHES)\n",
+    "        p1['fitness'] = (fitness[0], fitness[1], fitness[2])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +634,7 @@
        "'\\ndef evaluate(player1: dict, player2: dict, nim_size: int):\\n    # play 10 times against each other\\n    games = 10\\n    player_one_first = True\\n    while games > 0:\\n        if player_one_first:\\n            head2head(player1, player2, nim_size)\\n        else:\\n            head2head(player2, player1, nim_size)\\n        games -=1\\n'"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +669,7 @@
     "    \n",
     "    while cond:\n",
     "        individual = {'Rule1': random.randint(0,max_leave), 'Rule2': [random.randint(0,1), max_leave], 'Rule3': [random.randint(0, 1), random.randint(0, max_leave)]}\n",
-    "        individual['fitness'] = 0\n",
+    "        individual['fitness'] = ()\n",
     "        population.append(individual)\n",
     "        cond -= 1\n",
     "    return population"
@@ -669,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,18 +687,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_fitness(individuals: list):\n",
     "    for indv in individuals:\n",
-    "        indv['fitness'] = 0"
+    "        indv['fitness'] = ()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +739,7 @@
     "        else:\n",
     "            child[rule] = parent2[rule]\n",
     "    \n",
-    "    child['fitness'] = 0\n",
+    "    child['fitness'] = ()\n",
     "    rules = [key for key in child.keys() if 'Rule' in key]\n",
     "\n",
     "    #mutation\n",
@@ -756,23 +764,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Rule1': 1, 'Rule2': [0, 3], 'Rule3': [2, 2], 'fitness': 0}"
+       "{'Rule1': 2, 'Rule2': [0, 2], 'Rule3': [1, 10], 'fitness': ()}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "indv1 = {'Rule1': 2, 'Rule2': [0,3], 'Rule3': [1,10], 'fitness':0}\n",
-    "indv2 = {'Rule1': 0, 'Rule2': [1,2], 'Rule3': [2,2], 'fitness':0}\n",
+    "indv1 = {'Rule1': 2, 'Rule2': [0,3], 'Rule3': [1,10], 'fitness':()}\n",
+    "indv2 = {'Rule1': 0, 'Rule2': [1,2], 'Rule3': [2,2], 'fitness':()}\n",
     "\n",
     "crossover(indv1, indv2, 0.8)"
    ]
@@ -797,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,31 +864,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 350,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:root:best player {'Rule1': 0, 'Rule2': [1, 4], 'Rule3': [1, 4], 'fitness': 16}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Rule1': 0, 'Rule2': [1, 4], 'Rule3': [1, 4], 'fitness': 16}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#pop = [{'Rule1': 2, 'Rule2': [0,3], 'Rule3': [1,10], 'fitness':()}, {'Rule1': 0, 'Rule2': [0,3], 'Rule3': [1,10], 'fitness':()}]\n",
+    "#calculate_fitness(pop, 3)\n",
+    "#best = evolution_agent(3)\n",
     "\n",
-    "\n",
-    "best = evolution_agent(3)\n",
-    "\n",
-    "\n",
-    "print(best)"
+    "#print(best)\n"
    ]
   },
   {
@@ -892,38 +884,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:root:best player {'Rule1': 0, 'Rule2': [0, 8], 'Rule3': [1, 7], 'fitness': 19}\n",
-      "DEBUG:root:status: Initial board  -> <1 3 5 7 9>\n",
-      "DEBUG:root:status: After player 0 -> <0 3 5 7 9>\n",
-      "DEBUG:root:status: After player 1 -> <0 3 5 7 8>\n",
-      "DEBUG:root:status: After player 0 -> <0 3 5 3 8>\n",
-      "DEBUG:root:status: After player 1 -> <0 3 5 3 7>\n",
-      "DEBUG:root:status: After player 0 -> <0 3 4 3 7>\n",
-      "DEBUG:root:status: After player 1 -> <0 3 4 3 6>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 4 3 6>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 4 3 5>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 4 2 5>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 4 2 4>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 0 2 4>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 0 2 3>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 0 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 0 1 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 0 0 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 0 0 1>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 0 0 0>\n",
-      "INFO:root:status: Player 0 won!\n"
+      "INFO:root:status: Player 1 won!\n"
      ]
     }
    ],
    "source": [
-    "logging.getLogger().setLevel(logging.DEBUG)\n",
+    "logging.getLogger().setLevel(logging.INFO)\n",
     "\n",
     "\n",
     "def play_nim(agent1: Callable, opponent: Callable):\n",
@@ -940,7 +913,9 @@
     "    winner = 1 - player\n",
     "    logging.info(f\"status: Player {winner} won!\")\n",
     "\n",
-    "play_nim(make_strategy(evolution_agent(5)), dumb)\n",
+    "strat = make_strategy(evolution_agent(5))\n",
+    "for _ in range(4):\n",
+    "    play_nim(strat, random_agent)\n",
     "\n"
    ]
   }
