--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
     "# One that plays using a random strategy\n",
     "# One that always pick one element from the longest row\n",
     "\n",
-    "OPPONENT = [nim_sum_l, rand, dumb]"
+    "OPPONENT = [nim_sum_l, random_agent, dumb]"
    ]
   },
   {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
        "'\\ndef evaluate(player1: dict, player2: dict, nim_size: int):\\n    # play 10 times against each other\\n    games = 10\\n    player_one_first = True\\n    while games > 0:\\n        if player_one_first:\\n            head2head(player1, player2, nim_size)\\n        else:\\n            head2head(player2, player1, nim_size)\\n        games -=1\\n'"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,29 +763,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 346,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Rule1': 2, 'Rule2': [0, 2], 'Rule3': [1, 10], 'fitness': ()}"
-      ]
-     },
-     "execution_count": 346,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "indv1 = {'Rule1': 2, 'Rule2': [0,3], 'Rule3': [1,10], 'fitness':()}\n",
-    "indv2 = {'Rule1': 0, 'Rule2': [1,2], 'Rule3': [2,2], 'fitness':()}\n",
-    "\n",
-    "crossover(indv1, indv2, 0.8)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -805,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,19 +800,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_next_generation(population: list) -> list:\n",
-    "    best_k_offspring = sorted(population, key=lambda child: child['fitness'], reverse=True)[:POPULATION_SIZE]\n",
-    "\n",
-    "    return best_k_offspring\n"
+    "    \"\"\"Sort the population based on fitness retunr the top k best individuals\"\"\"\n",
+    "    best_k_indv = sorted(population, key=lambda child: child['fitness'], reverse=True)[:POPULATION_SIZE]\n",
+    "    return best_k_indv\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,19 +840,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 350,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pop = [{'Rule1': 2, 'Rule2': [0,3], 'Rule3': [1,10], 'fitness':()}, {'Rule1': 0, 'Rule2': [0,3], 'Rule3': [1,10], 'fitness':()}]\n",
-    "#calculate_fitness(pop, 3)\n",
-    "#best = evolution_agent(3)\n",
-    "\n",
-    "#print(best)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -884,17 +848,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:status: Player 1 won!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "logging.getLogger().setLevel(logging.INFO)\n",
     "\n",
@@ -914,9 +870,39 @@
     "    logging.info(f\"status: Player {winner} won!\")\n",
     "\n",
     "strat = make_strategy(evolution_agent(5))\n",
-    "for _ in range(4):\n",
-    "    play_nim(strat, random_agent)\n",
+    "#for _ in range(4):\n",
+    "play_nim(strat, random_agent)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Rule1': 0, 'Rule2': [0, 3], 'Rule3': [1, 10], 'fitness': ()}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TEST\n",
+    "indv1 = {'Rule1': 2, 'Rule2': [0,3], 'Rule3': [1,10], 'fitness':()}\n",
+    "indv2 = {'Rule1': 0, 'Rule2': [1,2], 'Rule3': [2,2], 'fitness':()}\n",
+    "\n",
+    "crossover(indv1, indv2, 0.8)\n",
+    "\n",
+    "#pop = [{'Rule1': 2, 'Rule2': [0,3], 'Rule3': [1,10], 'fitness':()}, {'Rule1': 0, 'Rule2': [0,3], 'Rule3': [1,10], 'fitness':()}]\n",
+    "#calculate_fitness(pop, 3)\n",
+    "#best = evolution_agent(3)\n",
+    "\n",
+    "#print(best)"
    ]
   }
  ],
