Evolution agent done, needs cleaning and comment

--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -8,6 +8,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evolution strategy described\n",
+    "\n",
+    "1. Create inital population (with POPULATION_SIZE) where each player has the same set of rules but different parameters\n",
+    "2. Generate offspring where OFFSPRING_SIZE>>POPULATION_SIZE:\n",
+    "    - k individuals compete against each other and the fittest becomes a parent\n",
+    "    - Preform crossover between two parents and create one child\n",
+    "3. Play all children against each other to calculate fitness\n",
+    "4. Pick out the top l \n",
+    "2. Evaluate:\n",
+    "    - Calculate fitness - all children plays agains each other (winner increase fitness)\n",
+    "3. Select the top k fittest children\n",
+    "4. Repeat 2-3 steps GENERATION amount of times\n",
+    "\n",
+    "\n",
+    "# Evolved Strategy\n",
+    "\n",
+    "0 the middle column\n",
+    "pick one from the longest\n",
+    "pick one from random rows\n",
+    "zero the smallest row\n",
+    "half the biggest row\n",
+    "take k sticks if possible otherwise take the max <br />\n",
+    "\n",
+    "onerow-stategy: only one row - leave x\n",
+    "2 rows: 1 rad = 1 element. ta x element från den andra raden\n",
+    "2 rows: both has more than 1 element - take random\n",
+    "else: take random random. \n",
+    "\n",
+    "genome: dict \n",
+    "individ = {rule1: x, rule2:y, rule3:z, rule4:n}\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 335,
    "metadata": {},
@@ -40,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Nim and Nimply classes"
+    "## The Nim and Nimply classes"
    ]
   },
   {
@@ -97,9 +133,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Agent playing with nim_sum\n",
-    "def nim_sum_l(nim):\n",
+    "def nim_sum_strategy(nim):\n",
+    "  \"\"\"\"Using the optimal strategy with nim-sum to calculate the best possible next move\"\"\"\n",
     "  X = nim._rows[0]\n",
+    "  \n",
     "  # X is the nim_sum(bitwise xor) of all heap sizes\n",
     "  for i in range(1, len(nim._rows)):\n",
     "    X = X ^ nim._rows[i]\n",
@@ -134,106 +171,6 @@
     "    else: rand_obj = 1\n",
     "    move = Nimply(rand_row, rand_obj)\n",
     "  return move"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Evolved Strategy\n",
-    "\n",
-    "0 the middle column\n",
-    "pick one from the longest\n",
-    "pick one from random rows\n",
-    "zero the smallest row\n",
-    "half the biggest row\n",
-    "take k sticks if possible otherwise take the max <br />\n",
-    "\n",
-    "onerow-stategy: only one row - leave x\n",
-    "2 rows: 1 rad = 1 element. ta x element från den andra raden\n",
-    "2 rows: both has more than 1 element - take random\n",
-    "else: take random random. \n",
-    "\n",
-    "genome: dict \n",
-    "individ = {rule1: x, rule2:y, rule3:z, rule4:n}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 340,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Remove x element from the only row left\n",
-    "# 0 < x <= k\n",
-    "def one_row_strategy(state: Nim, individual) -> Nimply:\n",
-    "    row_counter = -1\n",
-    "    for row in state.rows: \n",
-    "        row_counter += 1\n",
-    "        if row > 0:\n",
-    "            return Nimply(row_counter , min(row, individual[0]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 341,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def zero_middle_column(nim):\n",
-    "    #find the row with the amount of sticks that are in the middle\n",
-    "    sorted_rows = sorted(nim._rows)\n",
-    "\n",
-    "    middle_row = int(len(sorted_rows)/2) #make sure it is an even number\n",
-    "\n",
-    "    obj = sorted_rows[middle_row]\n",
-    "\n",
-    "    for i in nim._rows:\n",
-    "        if nim._rows[i] == obj:\n",
-    "            final_row = i\n",
-    "\n",
-    "    move = Nimply(i, obj)\n",
-    "    \n",
-    "    return move\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# MinMax\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 342,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def all_possible_moves(nim):\n",
-    "    possible_moves = []\n",
-    "\n",
-    "    for row in range(len(nim._rows)):\n",
-    "        for j in range(nim._rows[row]):\n",
-    "            copy_row = deepcopy(row)\n",
-    "\n",
-    "            new_move = copy_row[row] - j - 1\n",
-    "            possible_moves.append(new_move)\n",
-    "\n",
-    "    return possible_moves\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 343,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def evaluate_nim(nim, player):\n",
-    "    if not nim: # if game is finished\n",
-    "        # player 0 loose if return -1\n",
-    "        return -1 if player == 0 else 1\n"
    ]
   },
   {
@@ -349,6 +286,33 @@
     "    data = cook_status(state=state)\n",
     "    row = data[\"longest_row\"]\n",
     "    return Nimply(row, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hard_coded_agent(state: Nim):\n",
+    "    data = cook_status(state=state)\n",
+    "\n",
+    "    active_rows_number = data[\"active_rows_number\"]\n",
+    "\n",
+    "    if active_rows_number == 1:\n",
+    "        #rule2 \n",
+    "        pass\n",
+    "    elif active_rows_number % 2 == 0:\n",
+    "        #rule 2 or rule 3\n",
+    "        pass\n",
+    "    else:\n",
+    "        #rule4 or 5\n",
+    "        pass\n",
+    "    row = 0\n",
+    "    elem = 1\n",
+    "\n",
+    "    ply = Nimply(row, elem)\n",
+    "    return ply"
    ]
   },
   {
