--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,16 +317,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nim_sum_l' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [28], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#Create the agents that will play as opponents:\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m# One that plays with the nim_sum strategy\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39m# One that plays using a random strategy\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39m# One that always pick one element from the longest row\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m OPPONENT \u001b[39m=\u001b[39m [nim_sum_l, random_agent, dumb]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nim_sum_l' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Create the agents that will play as opponents:\n",
     "# One that plays with the nim_sum strategy\n",
     "# One that plays using a random strategy\n",
     "# One that always pick one element from the longest row\n",
     "\n",
-    "OPPONENT = [nim_sum_l, random_agent, dumb]"
+    "OPPONENT = [nim_sum_strategy, random_agent, dumb]"
    ]
   },
   {
@@ -338,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
